--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2021"
 clap = { version = "4.4.18", features = ["derive"] }
 owo-colors = "4.0.0"
 ress = "0.11.6"
+rustc_lexer = "0.1.0"
+wasm-bindgen = "0.2.91"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
