--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ clap = { version = "4.4.18", features = ["derive"] }
 owo-colors = "4.0.0"
 ress = "0.11.6"
 rustc_lexer = "0.1.0"
+serde = "1.0.203"
+serde_derive = "1.0.203"
+serde_json = "1.0.117"
 wasm-bindgen = "0.2.91"
 
 [lib]
